--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@mui/x-charts": "^7.28.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
