--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.0",
