--- a/frontend/src/backend.config.json
+++ b/frontend/src/backend.config.json
@@ -1,4 +1,4 @@
 {
   "BACKEND_PORT": 5005,
-  "BACKEND_URL": "https://bigbrain-deploy-z4f9-bjb34gbqh-tris-projects-db78a764.vercel.app/"
+  "BACKEND_URL": "https://bigbrain-deploy-z4f9-bjb34gbqh-tris-projects-db78a764.vercel.app"
 } 
