Update BACKEND_URL in backend.config.json for deployment accuracy
- Modified BACKEND_URL to a simplified endpoint, ensuring the application connects to the correct backend service.
- This change enhances deployment reliability and maintains consistency in the backend configuration.

--- a/frontend/backend.config.json
+++ b/frontend/backend.config.json
@@ -1,4 +1,4 @@
 {
   "BACKEND_PORT": 5005,
-  "BACKEND_URL": "https://bigbrain-deploy-z4f9-8k0jb2q0v-tris-projects-db78a764.vercel.app/"
+  "BACKEND_URL": "https://bigbrain-deploy-z4f9.vercel.app/"
 }
