--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -11,7 +11,7 @@
       "src": "/(.*)",
       "dest": "/server.js",
       "headers": {
-        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Origin": "https://z5481840-bigbrain-fe-deploy.vercel.app",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization"
       }
