--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,12 @@
   "name": "express-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "jest test/*",
     "lint": "eslint src/*.js",
     "start": "nodemon -r esm src/server.js --ignore database.json",
-    "reset": "npx rimraf database.json"
+    "reset": "node -r esm -e \"require('./redisAdapter').reset().then(() => console.log('Database reset successfully'))\""
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.6",
+    "redis": "^4.6.14",
     "supertest": "^6.0.0",
     "swagger-ui-express": "^4.1.4"
   },
@@ -36,5 +37,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "jest": "^26.6.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
