--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,16 +2,16 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "src/server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/server.js",
+      "dest": "/src/server.js",
       "headers": {
-        "Access-Control-Allow-Origin": "https://z5481840-bigbrain-fe-deploy.vercel.app",
+        "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization"
       }
