--- a/backend/package.json
+++ b/backend/package.json
@@ -2,19 +2,21 @@
   "name": "express-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "server.js",
   "scripts": {
     "test": "jest test/*",
     "lint": "eslint src/*.js",
-    "start": "nodemon -r esm src/server.js --ignore database.json",
-    "reset": "node -r esm -e \"require('./redisAdapter').reset().then(() => console.log('Database reset successfully'))\""
+    "start": "nodemon -r dotenv/config -r esm src/server.js --ignore database.json",
+    "reset": "node -r dotenv/config -r esm -e \"require('./redisAdapter').reset().then(() => console.log('Database reset successfully'))\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@upstash/redis": "^1.34.8",
     "async-lock": "^1.2.4",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "ioredis": "^5.6.1",
