Update package dependencies and server configuration for improved functionality
- Added the 'envy' package for enhanced environment variable management.
- Updated the main entry point in package.json to 'src/server.js' for better project structure.
- Implemented CORS handling for OPTIONS requests in server.js to improve API accessibility.
- Enhanced vercel.json with CORS headers for OPTIONS requests to ensure proper handling of preflight requests.

These changes optimize the backend setup and ensure better management of dependencies and API interactions.

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "express-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "jest test/*",
     "lint": "eslint src/*.js",
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "envy": "^2.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "ioredis": "^5.6.1",
