--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -13,6 +13,7 @@
       "dest": "/src/server.js",
       "headers": {
         "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Credentials": "true",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
         "Access-Control-Max-Age": "86400"
@@ -23,6 +24,7 @@
       "dest": "/src/server.js",
       "headers": {
         "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Credentials": "true",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization"
       }
