--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "envy": "^2.0.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-rate-limit": "^7.5.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.6",
