Update backend configuration and improve CORS handling
- Added a new build script to package.json for build completion notification.
- Updated .gitignore to exclude Vercel configuration files.
- Refined CORS settings in server.js to allow all origins for easier debugging.
- Simplified rate limiting configuration in server.js for better readability.

These changes enhance the backend's configuration management and improve the development experience by streamlining CORS and rate limiting settings.

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "test": "jest test/*",
     "lint": "eslint src/*.js",
     "start": "nodemon -r dotenv/config -r esm src/server.js --ignore database.json",
+    "build": "echo 'Build completed'",
     "reset": "node -r dotenv/config -r esm -e \"require('./redisAdapter').reset().then(() => console.log('Database reset successfully'))\""
   },
   "author": "",
