Refactor Redis adapter and update backend scripts
- Modified package.json to change the start script for production and added a dev script for development using nodemon.
- Enhanced redisAdapter.js to include a dummy adapter for environments without Redis configuration, improving development experience and error handling.
- Introduced a new health check API endpoint in health.js to provide system status and environment information.

These changes improve the backend's flexibility and robustness, facilitating development and monitoring.

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "jest test/*",
     "lint": "eslint src/*.js",
-    "start": "nodemon -r dotenv/config -r esm src/server.js --ignore database.json",
+    "start": "node -r dotenv/config src/server.js",
+    "dev": "nodemon -r dotenv/config src/server.js --ignore database.json",
     "build": "echo 'Build completed'",
-    "reset": "node -r dotenv/config -r esm -e \"require('./redisAdapter').reset().then(() => console.log('Database reset successfully'))\""
+    "reset": "node -r dotenv/config -e \"import('./redisAdapter.js').then(adapter => adapter.default.reset().then(() => console.log('Database reset successfully')))\""
   },
   "author": "",
   "license": "ISC",
