Refactor redisAdapter.js to use environment variables for Redis configuration and enhance data parsing logic
- Updated redisAdapter.js to utilize environment variables for UPSTASH_REDIS_URL and UPSTASH_REDIS_TOKEN, improving security and flexibility.
- Enhanced data parsing logic to handle cases where data is already an object, with added error handling for JSON parsing failures.

These changes improve the robustness of the Redis adapter and ensure sensitive information is not hardcoded.

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -18,6 +18,7 @@
     }
   ],
   "env": {
-    "NODE_ENV": "production"
+    "UPSTASH_REDIS_URL": "@upstash_redis_url",
+    "UPSTASH_REDIS_TOKEN": "@upstash_redis_token"
   }
 }
